[package]
name = "tokengen-cert"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt = { version = "0.16.0", features = ["openssl"] }
hmac = "0.12.1"
sha2 = "0.10.8"
openssl = { version = "0.10.64", features = ["vendored"] }
base64 = "0.22.0"
hex = "0.4.3"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.1", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"